Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjBoolean.quorum
class Main
    action Main
        Number v
        v:SetValue(Test())
    end

    action Test() returns Number
        boolean var = true
        return var
    end
end